Remove now unused watson error, line fixes/localization updates
- If the user gets this error, just tell them what's up. If a lot of people keep asking the same question, pin an issue to Github.